# learning-rust

dapoer-putri/: .gitignore  Cargo.toml  generate_query.py  query.sql
dapoer-putri/src/: main.rs  main.rs.backup
dapoer-putri/src/api/actix/: mod.rs  users.rs
dapoer-putri/src/custom_error/: mod.rs
dapoer-putri/src/data_sources/: data_sources.rs  initialization.rs  mod.rs  mongo_source.rs
duckdb-integration/: Cargo.toml  Dockerfile  data.json
duckdb-integration/src/: main.rs
google-integration/: Cargo.toml
google-integration/src/: main.rs
ingestion-tools/: .gitignore  Cargo.toml  output_0.json  output_1.json  output_2.json  output_3.json  output_4.json  output_5.json  run.sh
ingestion-tools/src/: custom_error.rs  main.rs  mongo_operation.rs  writer.rs
ingestion-tools/src/custom_error/: mod.rs
ktools/: Cargo.toml
ktools/src/: main.rs
ktools/src/os_monitoring/: mod.rs
ktools/src/os_operation/: path.rs
ktools/src/tests/: os_mmonitoring.rs
