[package]
name = "dapoer-putri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
mongodb = "2.6.0"
tokio = "1.29.1"
serde_json = { version="1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.175"
async-trait = "0.1.72"