[package]
name = "ingestion-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.6.0"
tokio = { version = "1.32.0",features = ["full"]    }
rayon = "1.7.0"
futures = "0.3.28"
serde_json = { version="1.0" }

