[package]
name = "ingestion-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.0",features=["tokio-sync"] }
tokio = { version = "1.32.0",features = ["full"] }
rayon = "1.7.0"
futures = "0.3.28"
serde_json = { version="1.0" }
clap = { version = "4.3.12", features = ["derive"] }
google-cloud-storage = "0.13.0"
async-trait = "0.1.73"
env_logger = "0.10.0"
log = "0.4.20"

